I fixed some bugs with the keyboard showing the wrong color if a new guess was made.

--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,13 @@ input.empty-box {
     border-radius: 15%;
     
 }
+
+#enter {
+    width: 90px;
+    border-radius: 10%;
+}
+
+#backspace {
+    width: 90px;
+    border-radius: 10%;
+}
